
All changes where made by Mark Overmeer <perl@overmeer.net>, unless
explicitly stated otherwise.

TODO:
	- move "Manual Repository" from ::Object into separate object
	- subs could not only list 'Inherited from', but also 'Extended by'
	- in POD, group "Inherited" referenced subs?

version 3.03:

	Improvements:
	- warning in addSubroutine()

version 3.02: Fri 15 Aug 14:52:20 CEST 2025

	Fixes:
	- option default now in auto-PMC scheme.

	Improvements:
	- oorestyle remove C<> and M<> where not needed.
	- oorestyle default [] and {}
	- apply oorestyle to OODoc
	- remove "Commonly used functions" section
	- html display of diagnostics
	- export inheritance structure

version 3.01: Thu 14 Aug 11:14:20 CEST 2025

	Changes:
	- $doc->prepare() becomes $doc->finalize()

	Fixes:
	- parser html accept C<<...>> syntax
	- parser html accept S<>, X<>, and Z<>
	- parser F<url> must be L<url>
	- parser F<> in italic

	Improvements:
	- parser add markup P<>
	- parser more documentation
	- link to metacpan.org, not search.cpan.org
	- parser auto-P<>, auto-M<>, and auto-C<>
	- add other Log::Report levels to diagnostics: info, notice, alert, failure
	- documentation improvements

version 3.00: Sat  2 Aug 14:59:32 CEST 2025

	Changes:
	- $oodoc->create()  -->  $oodoc->formatter->createPages
	- parameters to oodist and in the Makefile.PL via META
	- $doc->manual($name) --> $doc->findManual($name)
	- default licenses in PM and POD-tail via Software::License
	- hide ::Pod*::formatManual()
	- some changes to jump.cgi for html

	Fixes:
	- wrong place for section examples.
	- warning on finding a second method with the same name.
	- use block to declare $VERSION.  GitHUB pull #1 [Graham Knop]
	- methods without description will be followed with a blank
	  line anyway in the manual page.
	- pod, pod2 and html formatters lost subsubsections.

	Improvements:
	- replace File::Slurp by File::Slurper.
	- export documentation tree to JSON
	- ::Parser::Markov errors and warnings use Log::Report