@@ -61,8 +61,13 @@ sub _call($)
 	my $name       = $exporter->markupString($self->name);
 	my $paramlist  = $exporter->markupString($self->parameters);
 
+	### Also implemented in the formatters...
+
 	if($style eq 'html')
 	{	my $call       = qq[<b><a name="$unique">$name</a></b>];
+		$type eq 'tie'
+			and return qq[tie $call, $paramlist];
+
 		$call         .= "(&nbsp;$paramlist&nbsp;)" if length $paramlist;
 
 		return
@@ -71,15 +76,15 @@ sub _call($)
 		  : $type eq 'ci_method'? qq[\$any-&gt;$call]
 		  : $type eq 'overload' ? qq[overload: $call]
 		  : $type eq 'function' ? qq[$call]
-		  : $type eq 'tie'      ? $call
-		  : panic "Type $type? for $call";
+		  :    panic "Type $type? for $call";
 	}
 
 	if($style eq 'pod')
-	{	my $params
-		  = !length $paramlist ? '()'
-		  : $paramlist =~ m/^[\[<]|[\]>]$/ ? "( $paramlist )"
-		  :                      "($paramlist)";
+	{	$type eq 'tie'
+			and return qq[tie B<$name>, $paramlist];
+
+		my $params = !length $paramlist ? '()' :
+			$paramlist =~ m/^[\[<]|[\]>]$/ ? "( $paramlist )" : "($paramlist)";
 
 		return
 			$type eq 'i_method' ? qq[\$obj-E<gt>B<$name>$params]
@@ -87,7 +92,6 @@ sub _call($)
 		  : $type eq 'ci_method'? qq[\$any-E<gt>B<$name>$params]
 		  : $type eq 'function' ? qq[B<$name>$params]
 		  : $type eq 'overload' ? qq[overload: B<$name>]
-		  : $type eq 'tie'      ? qq[B<$name>$params]
 		  :    panic $type;
 	}
 
